--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": false,
   "license": "MIT",
-  "homepage": "https://hedwiggggg.github.io/ugrip",
+  "homepage": "",
   "scripts": {
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
+	"winBuild":"set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "cors": "node cors-anywhere.js",
     "serve": "serve build",
     "deploy": "gh-pages -d build"
